# basic_cmake_project

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
